[gd_scene load_steps=7 format=3 uid="uid://drt5tfxfgf7gu"]

[ext_resource type="Script" uid="uid://dknqbapfv2jf4" path="res://Desktop/MainMenu/main.gd" id="1_bd6tc"]
[ext_resource type="FontFile" uid="uid://dn6f12afvptqp" path="res://assets/Font/CascadiaCode/CascadiaCode-VariableFont_wght.ttf" id="1_j15vb"]
[ext_resource type="PackedScene" uid="uid://t6o5hoinr2oi" path="res://Desktop/MainMenu/default_mainmenu_text.tscn" id="1_pq62p"]
[ext_resource type="PackedScene" uid="uid://by5m8pjkthxjs" path="res://Desktop/MainMenu/input_else.tscn" id="5_bsruo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bsruo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rjhb5"]

[node name="Main" type="Node2D"]
script = ExtResource("1_bd6tc")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1157.0
offset_bottom = 652.0
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 1162.0
offset_bottom = 645.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_j15vb")
theme_override_font_sizes/font_size = 15
text = "Microsoft Windows. The Hostage [Beta Version]
Game Paling kece Corporation. All rights reserved.
"

[node name="DefaultMainmenuText" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_pq62p")]
layout_mode = 2
theme_override_font_sizes/font_size = 15

[node name="input" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/input"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/input/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_j15vb")
theme_override_font_sizes/font_size = 15
text = "C:\\Users\\>"

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/input/HBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_j15vb")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_bsruo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rjhb5")

[node name="error_input" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="InpuElse" parent="ScrollContainer/VBoxContainer/error_input" instance=ExtResource("5_bsruo")]
layout_mode = 2

[node name="name_input" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/name_input"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/name_input/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_j15vb")
theme_override_font_sizes/font_size = 15
text = "Input your name :"

[node name="name_input" type="LineEdit" parent="ScrollContainer/VBoxContainer/name_input/HBoxContainer"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_j15vb")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_bsruo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rjhb5")
max_length = 10

[connection signal="text_submitted" from="ScrollContainer/VBoxContainer/input/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="ScrollContainer/VBoxContainer/name_input/HBoxContainer/name_input" to="." method="_on_name_input_text_submitted"]
